wip getting full schedule
